Get tests to pass for current callback server
Restore tests once new CBS is ready